fixed issue with Path.of()